--- a/plot_time_trace.ipynb
+++ b/plot_time_trace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        " WindowsPath('C:/Program Files/Micro-Manager-nightly-markt/test-dcc.cfg')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +145,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## back to dcc load"
+    "## start here: dcc load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,19 +170,21 @@
      "output_type": "stream",
      "text": [
       "('DCCHub', 'DCCModule1', 'Core')\n",
+      "DCCHub ('SimulateDevice', 'Simulated', 'UseModule1', 'UseModule2', 'UseModule3', 'UseModule4', 'UseModule5', 'UseModule6', 'UseModule7', 'UseModule8')\n",
+      "DCCModule1 ('BaseAddress', 'BusNumber', 'C1_GainHV', 'C1_Minus5V', 'C1_Overloaded', 'C1_Plus12V', 'C1_Plus5V', 'C2_DigitalOut', 'C2_Minus5V', 'C2_Plus12V', 'C2_Plus5V', 'C3_CoolerCurrentLimit', 'C3_CoolerCurrentLimitReached', 'C3_CoolerVoltage', 'C3_Cooling', 'C3_GainHV', 'C3_Minus5V', 'C3_Overloaded', 'C3_Plus12V', 'C3_Plus5V', 'ClearOverloads', 'EnableOutputs', 'ModuleNumber', 'ModuleType', 'SerialNumber', 'SlotNumber')\n",
       "Core ('AutoFocus', 'AutoShutter', 'Camera', 'ChannelGroup', 'Focus', 'Galvo', 'ImageProcessor', 'Initialize', 'SLM', 'Shutter', 'TimeoutMs', 'XYStage')\n"
      ]
     }
    ],
    "source": [
     "print(mmc.getLoadedDevices())\n",
-    "for dev in core.getLoadedDevices():\n",
-    "    print(dev, core.getDevicePropertyNames(dev))"
+    "for dev in mmc.getLoadedDevices():\n",
+    "    print(dev, mmc.getDevicePropertyNames(dev))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +193,7 @@
        "('ENABLE', 'GAIN CONTROL PERCENT', 'Supply')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +213,7 @@
        "['BH_DCC', 'BH_DCC_DCU']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +252,14 @@
       "UseModule7 No\n",
       "UseModule8 No\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lociuser\\code\\timetagger-scripts\\.venv\\Lib\\site-packages\\pymmcore_plus\\core\\_mmcore_plus.py:383: UserWarning: The specified device label \"DCCHub\" is already in use. Device 'DCCHub' appears to be loaded already.\n",
+      "  if exc := self._load_error_with_info(label, moduleName, deviceName, str(e)):\n"
+     ]
     }
    ],
    "source": [
@@ -262,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +316,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('0.0000', 'Off', '0.0000')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mmc.getProperty('DCCModule1', 'C3_CoolerVoltage'), mmc.getProperty('DCCModule1','C3_Cooling'),mmc.getProperty('DCCModule1','C3_CoolerCurrentLimit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +345,7 @@
        "('0.0000', 'Off', 'Off')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,12 +370,280 @@
     "    mmc.setProperty('DCCModule1',ch+'_GainHV',gain)\n",
     "    mmc.setProperty('DCCModule1','EnableOutputs','Off')\n",
     "    mmc.setProperty('DCCModule1',ch+'_Plus12V','Off')\n",
-    "    mmc.waitForDevice('DCCModule1')\n"
+    "    mmc.waitForDevice('DCCModule1')\n",
+    "\n",
+    "def pmt_cooler(mmc):\n",
+    "    mmc.setProperty('DCCModule1', 'C3_CoolerVoltage',2.6) \n",
+    "    mmc.setProperty('DCCModule1','C3_Cooling','On')\n",
+    "    mmc.setProperty('DCCModule1','C3_CoolerCurrentLimit',1.0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass, asdict\n",
+    "from typing import Optional\n",
+    "\n",
+    "@dataclass\n",
+    "class PMTChannelConfig:\n",
+    "    module: str = \"DCCModule1\"\n",
+    "    channel: str = \"C3\"\n",
+    "    gain_hv: float = 65.0\n",
+    "    enable_outputs: bool = True\n",
+    "    plus12v: bool = True\n",
+    "    cooler_voltage: Optional[float] = None\n",
+    "    cooler_on: bool = False\n",
+    "    cooler_current_limit: Optional[float] = None\n",
+    "\n",
+    "    def apply(self, mmc):\n",
+    "        \"\"\"Write this config into the MMCore device.\"\"\"\n",
+    "        ch = self.channel\n",
+    "        m = self.module\n",
+    "\n",
+    "        mmc.setProperty(m, f\"{ch}_GainHV\",      self.gain_hv)\n",
+    "        mmc.setProperty(m, \"EnableOutputs\",     \"On\" if self.enable_outputs else \"Off\")\n",
+    "        mmc.setProperty(m, f\"{ch}_Plus12V\",      \"On\" if self.plus12v       else \"Off\")\n",
+    "\n",
+    "        if self.cooler_voltage is not None:\n",
+    "            mmc.setProperty(m, f\"{ch}_CoolerVoltage\", self.cooler_voltage)\n",
+    "        if self.cooler_on:\n",
+    "            mmc.setProperty(m, f\"{ch}_Cooling\",       \"On\")\n",
+    "        if self.cooler_current_limit is not None:\n",
+    "            mmc.setProperty(m, f\"{ch}_CoolerCurrentLimit\", self.cooler_current_limit)\n",
+    "\n",
+    "        mmc.waitForDevice(m)\n",
+    "\n",
+    "    def snapshot(self, mmc):\n",
+    "        \"\"\"Read back every property into a dict.\"\"\"\n",
+    "        ch = self.channel\n",
+    "        m  = self.module\n",
+    "\n",
+    "        data = {\n",
+    "            \"gain_hv\":           float(mmc.getProperty(m, f\"{ch}_GainHV\")),\n",
+    "            \"enable_outputs\":    mmc.getProperty(m, \"EnableOutputs\") == \"On\",\n",
+    "            \"plus12v\":           mmc.getProperty(m, f\"{ch}_Plus12V\") == \"On\",\n",
+    "            \"cooler_voltage\":    float(mmc.getProperty(m, f\"{ch}_CoolerVoltage\")),\n",
+    "            \"cooler_on\":         mmc.getProperty(m, f\"{ch}_Cooling\") == \"On\",\n",
+    "            \"cooler_current_limit\": float(mmc.getProperty(m, f\"{ch}_CoolerCurrentLimit\")),\n",
+    "        }\n",
+    "        return data\n",
+    "\n",
+    "    def set_gain(self, mmc, gain_hv: float):\n",
+    "        \"\"\"Change only the high‑voltage gain (in %).\"\"\"\n",
+    "        self.gain_hv = gain_hv\n",
+    "        mmc.setProperty(self.module, f\"{self.channel}_GainHV\", gain_hv)\n",
+    "        mmc.waitForDevice(self.module)\n",
+    "\n",
+    "    def turn_off_cooling(self, mmc):\n",
+    "        \"\"\"Disable the cooler on this channel.\"\"\"\n",
+    "        self.cooler_on = False\n",
+    "        mmc.setProperty(self.module, f\"{self.channel}_Cooling\", \"Off\")\n",
+    "        mmc.waitForDevice(self.module)\n",
+    "\n",
+    "    def turn_off_pmt(self, mmc):\n",
+    "        \"\"\"\n",
+    "        Fully power down the PMT channel:\n",
+    "         - set gain to 0%\n",
+    "         - outputs OFF\n",
+    "         - +12 V OFF\n",
+    "         - cooler OFF\n",
+    "        \"\"\"\n",
+    "        m, ch = self.module, self.channel\n",
+    "        self.gain_hv = 0.0\n",
+    "        self.enable_outputs = False\n",
+    "        self.plus12v = False\n",
+    "        self.cooler_on = False\n",
+    "\n",
+    "        mmc.setProperty(m, f\"{ch}_GainHV\",      0.0)\n",
+    "        mmc.setProperty(m, \"EnableOutputs\",     \"Off\")\n",
+    "        mmc.setProperty(m, f\"{ch}_Plus12V\",      \"Off\")\n",
+    "        mmc.setProperty(m, f\"{ch}_Cooling\",      \"Off\")\n",
+    "        mmc.waitForDevice(m)\n",
+    "\n",
+    "    def destroy(self, mmc):\n",
+    "        self.turn_off_pmt(mmc)\n",
+    "        \n",
+    "import time\n",
+    "def sweep_gain(mmc, config: PMTChannelConfig,\n",
+    "               start: int=45, stop: int=85, step: int=5, sleep_sec = 2):\n",
+    "    \n",
+    "    for g in range(start, stop+1, step):\n",
+    "        config.set_gain(mmc, g)\n",
+    "        #results[g] = config.snapshot(mmc)\n",
+    "        print(config.snapshot(mmc)['gain_hv'])\n",
+    "        time.sleep(sleep_sec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PMTChannelConfig(module='DCCModule1', channel='C3', gain_hv=70, enable_outputs=True, plus12v=True, cooler_voltage=2.6, cooler_on=True, cooler_current_limit=1.0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg = PMTChannelConfig(\n",
+    "    module=\"DCCModule1\", channel=\"C3\",\n",
+    "    gain_hv=70, enable_outputs=True, plus12v=True,\n",
+    "    cooler_voltage=2.6, cooler_on=True, cooler_current_limit=1.0\n",
+    ")\n",
+    "cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PMT status: {'gain_hv': 70.0, 'enable_outputs': True, 'plus12v': True, 'cooler_voltage': 2.6, 'cooler_on': True, 'cooler_current_limit': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cfg.apply(mmc)\n",
+    "status = cfg.snapshot(mmc)\n",
+    "print(\"PMT status:\", status)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PMT status: {'gain_hv': 70.0, 'enable_outputs': True, 'plus12v': True, 'cooler_voltage': 2.6, 'cooler_on': True, 'cooler_current_limit': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cfg.apply(mmc)\n",
+    "status = cfg.snapshot(mmc)\n",
+    "print(\"PMT status:\", status)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(70, True)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg.gain_hv, cfg.enable_outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.0\n",
+      "50.0\n",
+      "55.0\n",
+      "60.0\n",
+      "65.0\n",
+      "70.0\n",
+      "75.0\n",
+      "80.0\n",
+      "85.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_gain(mmc,cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg.turn_off_pmt(mmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from TimeTagger import TimeTagger, HistogramLogBins\n",
+    "tagger = TimeTagger.createTimeTagger()\n",
+    "# click_channel is your PMT channel, start_channel can be unused or your sync\n",
+    "cfg.apply()\n",
+    "hist = HistogramLogBins(tagger,\n",
+    "                       click_channel=-1,\n",
+    "                       start_channel=1,   # or your laser‑sync channel\n",
+    "                       exp_start=100,      # bin width in ps\n",
+    "                       n_bins=100) \n",
+    "#classHistogramLogBins(tagger, click_channel, start_channel, exp_start, ex_stop, n_bins, click_gate=None, start_gate=None)\n",
+    "cfg.turn_off_pmt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
