adding mdo examples and link to misc examples in the notebook

--- a/Read_tekMDO32_data.ipynb
+++ b/Read_tekMDO32_data.ipynb
@@ -216,11 +216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f41eaa86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  \"ASRL1::INSTR\"\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "! list-visa-resources"
+   ]
   },
   {
    "cell_type": "code",
@@ -228,12 +240,247 @@
    "id": "98ff3f0f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from tm_devices import DeviceManager\n",
+    "\n",
+    "with DeviceManager() as device_manager:\n",
+    "    scope = device_manager.add_scope(\"192.168.0.1\")\n",
+    "    scope.query(\"*IDN?\")\n",
+    "    print(scope)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e8d9ed-7d4f-4159-8e22-0973d8b80379",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7228a86-986e-40f1-a5e5-8a0cdd5dbe5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"An example showing a basic curve query.\"\"\"\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from tm_devices import DeviceManager\n",
+    "from tm_devices.drivers import AFG3KC, MSO5\n",
+    "\n",
+    "EXAMPLE_CSV_FILE = Path(\"example_curve_query.csv\")\n",
+    "\n",
+    "with DeviceManager(verbose=True) as dm:\n",
+    "    scope: MSO5 = dm.add_scope(\"MSO56-100083\")\n",
+    "    afg: AFG3KC = dm.add_afg(\"192.168.0.1\")\n",
+    "\n",
+    "    # Turn on AFG\n",
+    "    afg.set_and_check(\":OUTPUT1:STATE\", \"1\")\n",
+    "\n",
+    "    # Perform curve query and save results to csv file\n",
+    "    curve_returned = scope.curve_query(1, output_csv_file=EXAMPLE_CSV_FILE)\n",
+    "\n",
+    "# Read in the curve query from file\n",
+    "with EXAMPLE_CSV_FILE.open(encoding=\"utf-8\") as csv_content:\n",
+    "    curve_saved = [int(i) for i in csv_content.read().split(\",\")]\n",
+    "\n",
+    "# Verify query saved to csv is the same as the one returned from curve_query function call\n",
+    "assert curve_saved == curve_returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6142d07a-e471-4e85-be82-a5035639d0ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"An example of saving and recalling a waveform and session file.\"\"\"\n",
+    "\n",
+    "from tm_devices import DeviceManager\n",
+    "from tm_devices.drivers import MSO6B\n",
+    "\n",
+    "with DeviceManager(verbose=True) as dm:\n",
+    "    # Get a scope\n",
+    "    scope: MSO6B = dm.add_scope(\"192.168.0.1\")\n",
+    "\n",
+    "    # Send some commands\n",
+    "    scope.add_new_math(\"MATH1\", \"CH1\")  # add MATH1 to CH1\n",
+    "    scope.turn_channel_on(\"CH2\")  # turn on channel 2\n",
+    "    scope.set_and_check(\":HORIZONTAL:SCALE\", 100e-9)  # adjust horizontal scale\n",
+    "\n",
+    "    # save the session as example.tss\n",
+    "    scope.commands.save.session.write(\"example.tss\")\n",
+    "    # save the waveform on CH1 as example.wfm\n",
+    "    scope.commands.save.waveform.write('CH1,\"example.wfm\"')\n",
+    "\n",
+    "    scope.reset()  # reset the scope\n",
+    "\n",
+    "    scope.recall_session(\"example.tss\")  # recall the saved session example.tss\n",
+    "    scope.recall_reference(\"example.wfm\", 1)  # recall example.wfm as REF1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6269cee2-e83b-4108-9db7-8cf5ed13072f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"An example script for connecting and configuring scope for acquisition.\"\"\"\n",
+    "\n",
+    "from tm_devices import DeviceManager\n",
+    "from tm_devices.drivers import MSO6B\n",
+    "from tm_devices.helpers import PYVISA_PY_BACKEND\n",
+    "\n",
+    "with DeviceManager(verbose=True) as device_manager:\n",
+    "    # Enable resetting the devices when connecting and closing\n",
+    "    device_manager.setup_cleanup_enabled = True\n",
+    "    device_manager.teardown_cleanup_enabled = True\n",
+    "\n",
+    "    # Use the PyVISA-py backend\n",
+    "    device_manager.visa_library = PYVISA_PY_BACKEND\n",
+    "\n",
+    "    # Creating Scope driver object by providing ip address.\n",
+    "    scope: MSO6B = device_manager.add_scope(\"127.0.0.1\")\n",
+    "\n",
+    "    # Turn on channel 1 and channel 2\n",
+    "    scope.commands.display.waveview1.ch[1].state.write(\"ON\")\n",
+    "    scope.commands.display.waveview1.ch[2].state.write(\"ON\")\n",
+    "\n",
+    "    # Set channel 1 vertical scale to 10mV\n",
+    "    scope.commands.ch[1].scale.write(10e-3)\n",
+    "\n",
+    "    # Set horizontal record length to 20000\n",
+    "    scope.commands.horizontal.recordlength.write(20000)\n",
+    "\n",
+    "    # Set horizontal position to 100\n",
+    "    scope.commands.horizontal.position.write(10)\n",
+    "\n",
+    "    # Set trigger type to Edge\n",
+    "    scope.commands.trigger.a.type.write(\"EDGE\")\n",
+    "\n",
+    "    # Acquisition setup\n",
+    "    scope.commands.acquire.state.write(\"OFF\")\n",
+    "    scope.commands.acquire.mode.write(\"Sample\")\n",
+    "    scope.commands.acquire.stopafter.write(\"Sequence\")\n",
+    "\n",
+    "    # Adding measurements\n",
+    "    scope.commands.measurement.addmeas.write(\"AMPLitude\")\n",
+    "    scope.commands.measurement.addmeas.write(\"PK2PK\")\n",
+    "    scope.commands.measurement.addmeas.write(\"MAXIMUM\")\n",
+    "    scope.commands.measurement.meas[1].source.write(\"CH1\")\n",
+    "    scope.commands.measurement.meas[2].source.write(\"CH1\")\n",
+    "    scope.commands.measurement.meas[3].source.write(\"CH2\")\n",
+    "\n",
+    "    # Get the measurement values\n",
+    "    scope.commands.acquire.state.write(\"ON\")\n",
+    "\n",
+    "    if int(scope.commands.opc.query()) == 1:\n",
+    "        scope.commands.measurement.meas[1].results.currentacq.mean.query()\n",
+    "        scope.commands.measurement.meas[2].results.currentacq.maximum.query()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2ffec98-365e-4f4d-bdfa-a62d38684c9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Save a screenshot on the device and copy it to the local machine/environment.\"\"\"\n",
+    "\n",
+    "from tm_devices import DeviceManager\n",
+    "from tm_devices.drivers import MSO6B\n",
+    "\n",
+    "with DeviceManager(verbose=True) as dm:\n",
+    "    # Add a scope\n",
+    "    scope: MSO6B = dm.add_scope(\"192.168.0.1\")\n",
+    "\n",
+    "    # Send some commands\n",
+    "    scope.add_new_math(\"MATH1\", \"CH1\")  # add MATH1 to CH1\n",
+    "    scope.turn_channel_on(\"CH2\")  # turn on channel 2\n",
+    "    scope.set_and_check(\":HORIZONTAL:SCALE\", 100e-9)  # adjust horizontal scale\n",
+    "\n",
+    "    # Save a screenshot as a timestamped file. This will create a screenshot on the device,\n",
+    "    # copy it to the current working directory on the local machine,\n",
+    "    # and then delete the screenshot file from the device.\n",
+    "    scope.save_screenshot()\n",
+    "\n",
+    "    # Save a screenshot as \"example.png\". This will create a screenshot on the device,\n",
+    "    # copy it to the current working directory on the local machine,\n",
+    "    # and then delete the screenshot file from the device.\n",
+    "    scope.save_screenshot(\"example.png\")\n",
+    "\n",
+    "    # Save a screenshot as \"example.jpg\". This will create a screenshot on the device\n",
+    "    # using INVERTED colors in the \"./device_folder\" folder,\n",
+    "    # copy it to \"./images/example.jpg\" on the local machine,\n",
+    "    # but this time the screenshot file on the device will not be deleted.\n",
+    "    scope.save_screenshot(\n",
+    "        \"example.jpg\",\n",
+    "        colors=\"INVERTED\",\n",
+    "        local_folder=\"./images\",\n",
+    "        device_folder=\"./device_folder\",\n",
+    "        keep_device_file=True,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc236ea9-6827-4453-bec7-de7e9600f1f8",
+   "metadata": {},
+   "source": [
+    "tm_devices/examples/miscellaneous/\n",
+    "- adding_devices.py\n",
+    "- adding_devices_with_env_var.py\n",
+    "- alias_usage.py\n",
+    "- custom_device_driver_support.py\n",
+    "- customize_logging.py\n",
+    "- disable_command_verification.py\n",
+    "- pyvisa_resource_access.py\n",
+    "- register_dm_atexit.py\n",
+    "- visa_connection_selectivity.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f74662-20c0-4577-bd00-75a30b552bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f10df41-3414-4afc-98b8-578112c62343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3288be8c-aaf6-45f9-a57b-46e610bcdf30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d1a22d6-2ba0-46c1-b099-d5ee42c802b4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
